update db manager and tests(all passed)