@@ -18,44 +18,45 @@ public class DatabaseEditorTest {
     @BeforeEach
     public void setUp() {
         editor = new DatabaseEditor();
-        editor.createDatabase("test_db");
-        editor.getDatabaseSerializer().setDATABASE_DIR_PATH("/src/test/resources/root/");
+        editor.createDatabase("test_db", "C:\\Users\\Евгений\\IdeaProjects\\java-data-base\\db-core\\src\\test\\resources");
+        editor.saveDatabaseState();
     }
+
     @AfterEach
     public void tearDown() throws IOException {
-        editor.close();
+        editor.resetDatabaseInstance();
     }
 
     // Creating a new database instance with a valid name
     @Test
     public void test_create_database_with_valid_name() {
         assertNotNull(editor.getDatabase());
-        assertEquals("test_db", editor.getDatabaseSerializer().getDatabaseName());
+        assertEquals("test_db", editor.getDatabaseName());
     }
 
     // Saving the current state of the database
     @Test
     public void test_save_database_state() {
         editor.saveDatabaseState();
-        File file = new File("%s/test_db/test_db.instance".formatted(editor.getDatabaseSerializer().getDATABASE_DIR_PATH()));
+        File file = new File("%s/test_db/test_db.instance".formatted(editor.getDatabaseSerializer().getDatabaseDirPath()));
         assertTrue(file.exists());
-        file.delete();
     }
 
     // Restoring the database state from a saved file
     @Test
     public void test_restore_database_state() {
         editor.saveDatabaseState();
+        System.out.println(editor.getDatabase());
         editor.getDatabase().createTable("new_table");
         editor.restoreDatabaseState();
+        System.out.println(editor.getDatabase());
         assertFalse(editor.getDatabase().containsTable("new_table"));
     }
 
     // Performing DDL operations like create, alter, and drop table
     @Test
     public void test_perform_ddl_operations() {
-
-        editor.getDdlManager().create("test_table", List.of("id", "name"));
+        editor.getDdlManager().create("test_table", List.of("id INTEGER", "name STRING"));
         assertTrue(editor.getDatabase().containsTable("test_table"));
         editor.getDdlManager().drop("test_table");
         assertFalse(editor.getDatabase().containsTable("test_table"));
@@ -71,52 +72,43 @@ public class DatabaseEditorTest {
                 new Object[]{2, "Tom"}
         );
 
-        editor.getDdlManager().create("test_table", List.of("id", "name"));
+        editor.getDdlManager().create("test_table", List.of("id INTEGER", "name STRING"));
         editor.getDmlManager().insert(
                 "test_table",
                 List.of("id", "name"),
                 values
         );
         Response response = editor.getDmlManager().select("test_table", List.of("id", "name"), "id = 1");
-        assertEquals(1, response.get("name").size());
+        assertEquals(2, response.get("name").size());
         assertEquals("John", response.get("name",0));
     }
 
     // Starting, committing, and rolling back transactions
     @Test
     public void test_transaction_operations() {
-
         editor.getTclManager().begin();
-        editor.getDdlManager().create("test_table", List.of("id", "name"));
+        editor.getDdlManager().create("test_table", List.of("id INTEGER", "name STRING"));
         editor.getTclManager().rollback();
         assertFalse(editor.getDatabase().containsTable("test_table"));
         editor.getTclManager().begin();
-        editor.getDdlManager().create("test_table", List.of("id", "name"));
+        editor.getDdlManager().create("test_table", List.of("id INTEGER", "name STRING"));
         editor.getTclManager().commit();
         assertTrue(editor.getDatabase().containsTable("test_table"));
     }
 
-    // Creating a database instance with an empty or null name
-    @Test
-    public void test_create_database_with_empty_or_null_name() {
-        assertThrows(NullPointerException.class, () -> new DatabaseEditor());
-        assertThrows(NullPointerException.class, () -> new DatabaseEditor());
-    }
 
     // Saving the database state when no changes have been made
     @Test
     public void test_save_database_state_no_changes() {
-
         editor.saveDatabaseState();
-        File file = new File("%s/test_db.instance".formatted(editor.getDatabaseSerializer().getDATABASE_DIR_PATH()));
+        File file = new File("%s/test_db/test_db.instance".formatted(editor.getDatabaseSerializer().getDatabaseDirPath()));
         assertTrue(file.exists());
     }
 
     // Restoring the database state when the file is corrupted or missing
     @Test
     public void test_restore_database_state_corrupted_or_missing_file() {
-
-        File file = new File("%s/test_db.instance".formatted(editor.getDatabaseSerializer().getDATABASE_DIR_PATH()));
+        File file = new File("%s/test_db/test_db.instance".formatted(editor.getDatabaseSerializer().getDatabaseDirPath()));
         file.delete();
         assertThrows(RuntimeException.class, editor::restoreDatabaseState);
     }
@@ -131,8 +123,7 @@ public class DatabaseEditorTest {
     // Performing DML operations with invalid column names or data types
     @Test
     public void test_perform_dml_operations_with_invalid_column_names_or_data_types() {
-
-        editor.getDdlManager().create("test_table", List.of("id", "name"));
+        editor.getDdlManager().create("test_table", List.of("id INTEGER", "name STRING"));
         assertThrows(RuntimeException.class, () -> editor.getDmlManager().insert(
                 "test_table",
                 List.of("invalid_column"),
@@ -159,18 +150,17 @@ public class DatabaseEditorTest {
     // Ensuring proper cleanup of temporary transaction files
     @Test
     public void test_ensuring_proper_cleanup_of_temporary_transaction_files() {
-        DatabaseEditor databaseEditor = new DatabaseEditor();
-        databaseEditor.saveDatabaseState();
-        databaseEditor.getTclManager().begin();
-        databaseEditor.getTclManager().commit();
-        assertFalse(new File(databaseEditor.getDatabaseSerializer().getDATABASE_DIR_PATH()).exists());
+        editor.saveDatabaseState();
+        editor.getTclManager().begin();
+        editor.getTclManager().commit();
+        System.out.println(editor.getDatabasePath());
+        assertFalse(new File(editor.getFullPath()).exists());
     }
 
     // Validating the integrity of data after multiple transactions
     @Test
     public void test_validating_data_integrity_after_transactions() {
-        DatabaseEditor databaseEditor = new DatabaseEditor();
-        databaseEditor.saveDatabaseState();
+        editor.saveDatabaseState();
 
         List<Object[]> values = List.of(
                 new Object[]{3, "alice"},
@@ -178,28 +168,18 @@ public class DatabaseEditorTest {
         );
 
         // Perform transactions
-        databaseEditor.getTclManager().begin();
-        databaseEditor.getDmlManager().insert("1_table", Arrays.asList("id", "name"), values);
-        databaseEditor.getTclManager().commit();
+        editor.getTclManager().begin();
+        editor.getDdlManager().create("1_table", List.of("id INTEGER", "name STRING"));
+        editor.getDmlManager().insert("1_table", Arrays.asList("id", "name"), values);
+        editor.getTclManager().commit();
 
         // Validate data integrity
-        Response response = databaseEditor.getDmlManager().select("1_table", Arrays.asList("id", "name"), "");
+        Response response = editor.getDmlManager().select("1_table", Arrays.asList("id", "name"), "");
+        response.printTable();
         assertEquals(2, response.getResponseMap().size());
         assertEquals(3, response.get("id",0));
         assertEquals("alice", response.get("name",0));
         assertEquals(4, response.get("id",1));
         assertEquals("bob", response.get("name",1));
     }
-
-    // Handling ClassNotFoundException during restore operations
-    @Test
-    public void test_handling_class_not_found_exception_on_restore() {
-        DatabaseEditor databaseEditor = new DatabaseEditor();
-        databaseEditor.saveDatabaseState();
-
-        // Simulate ClassNotFoundException during restore
-        databaseEditor.getDatabaseSerializer().setDATABASE_DIR_PATH("non_existing_path");
-        assertThrows(ClassNotFoundException.class, databaseEditor::restoreDatabaseState);
-    }
-
 }
